feat: gsap animation

--- a/www/about-us.html
+++ b/www/about-us.html
@@ -95,14 +95,15 @@
             </div>
         </section>
 
-        <section class="o-section o-section--light js--pin">
+        <section class="o-section o-section--light pt-0 js--timeline-section">
             <div class="a-container a-container--xl">
-                <div class="m-timeline js--timelineAnimation">
+                <div class="m-timeline js--timeline">
                     <div class="m-timeline__dots js--dotted-line"></div>
                     <div class="m-timeline__wrapper">
                         <ul class="m-timeline__list">
-                            <li class="m-timeline__item js--line">
-                                <div class="m-timeline__content js--timeline-content">
+                            <li class="m-timeline__item">
+                                <span class="m-timeline__line js--timeline-line"></span>
+                                <div class="m-timeline__content js--timeline-content js--timeline-content--top">
                                     <h3 class="a-title m-timeline__title">
                                         1991
                                     </h3>
@@ -112,8 +113,9 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item js--line">
-                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content">
+                            <li class="m-timeline__item">
+                                <span class="m-timeline__line js--timeline-line"></span>
+                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content js--timeline-content--bottom">
                                     <h3 class="a-title m-timeline__title">
                                         2000
                                     </h3>
@@ -123,8 +125,9 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item js--line">
-                                <div class="m-timeline__content js--timeline-content">
+                            <li class="m-timeline__item">
+                                <span class="m-timeline__line js--timeline-line"></span>
+                                <div class="m-timeline__content js--timeline-content js--timeline-content--top">
                                     <h3 class="a-title m-timeline__title">
                                         2005
                                     </h3>
@@ -133,8 +136,9 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item js--line">
-                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content">
+                            <li class="m-timeline__item">
+                                <span class="m-timeline__line js--timeline-line"></span>
+                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content js--timeline-content--bottom">
                                     <h3 class="a-title m-timeline__title">
                                         2008
                                     </h3>
@@ -143,8 +147,9 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item js--line">
-                                <div class="m-timeline__content js--timeline-content">
+                            <li class="m-timeline__item">
+                                <span class="m-timeline__line js--timeline-line"></span>
+                                <div class="m-timeline__content js--timeline-content js--timeline-content--top">
                                     <h3 class="a-title m-timeline__title">
                                         2013
                                     </h3>
@@ -153,8 +158,9 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item js--line">
-                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content">
+                            <li class="m-timeline__item">
+                                <span class="m-timeline__line js--timeline-line"></span>
+                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content js--timeline-content--bottom">
                                     <h3 class="a-title m-timeline__title">
                                         2013
                                     </h3>
@@ -163,8 +169,9 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item js--line">
-                                <div class="m-timeline__content js--timeline-content">
+                            <li class="m-timeline__item">
+                                <span class="m-timeline__line js--timeline-line"></span>
+                                <div class="m-timeline__content js--timeline-content js--timeline-content--top">
                                     <h3 class="a-title m-timeline__title">
                                         2013
                                     </h3>
