feat: úpravy pro rich text

--- a/www/about-us.html
+++ b/www/about-us.html
@@ -205,8 +205,8 @@
 
         <section class="o-section o-section--light pt-0">
             <div class="a-container a-container--xl">
-                <h2 class="a-title a-title--bold">politika kvality</h2>
                 <div class="a-perex">
+                    <h2>politika kvality</h2>
                     <p>Politika kvality je součástí strategického záměru stanoveného pro dosažení špičkových technických parametrů procesu, jejich uplatnění na trzích a zajištění prosperity společnosti. Politika kvality a její hlavní cíle byla poprvé stanovena managementem dne 1.11.2006. Přezkoumána a upravena byla v roce 2018.</p>
                 </div>
                 <div class="row mt-5 g-4">
