--- a/www/service-detail.html
+++ b/www/service-detail.html
@@ -93,9 +93,11 @@
             <div class="a-container a-container--xl">
                 <div class="row">
                     <div class="col-md-6">
-                        <h2 class="a-title a-title--bold a-title--sm">
-                            Naše provozní středisko v Chrudimi spravuje areál bývalé Transporty a.s.
-                        </h2>
+                        <div class="a-perex">
+                            <h2>
+                                Naše provozní středisko v Chrudimi spravuje areál bývalé Transporty a.s.
+                            </h2>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="a-perex">
@@ -114,15 +116,18 @@
 
         <section class="o-section o-section--light">
             <div class="a-container a-container--xl">
-                <h2 class="a-title a-title--bold">Naše společnost nabízí především</h2>
-                <ul class="a-list a-list--dash">
-                    <li><span> výroba vstřikovacích forem na termoplasty, včetně forem na lisy babyplast</span></li>
-                    <li><span> výroba kokil na lití hliníkových slitin a zinku</span></li>
-                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
-                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
-                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
-                    <li><span> výroba velmi přesných a tvarově složitých dílců (vložky forem, razníky, střižné matrice, protlačovací matrice, součásti automatických linek, díly přípravků)</span></li>
-                </ul>
+                <div class="a-perex">
+                    <h2>Naše společnost nabízí především</h2>
+                    <ul>
+                        <li><span> výroba vstřikovacích forem na termoplasty, včetně forem na lisy babyplast</span></li>
+                        <li><span> výroba kokil na lití hliníkových slitin a zinku</span></li>
+                        <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                        <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                        <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                        <li><span> výroba velmi přesných a tvarově složitých dílců (vložky forem, razníky, střižné matrice, protlačovací matrice, součásti automatických linek, díly přípravků)</span></li>
+                    </ul>
+                </div>
+
             </div>
         </section>
 
@@ -137,8 +142,8 @@
 
         <section class="o-section o-section--light">
             <div class="a-container a-container--xl">
-                <h2 class="a-title a-title--bold">Naše společnost nabízí především</h2>
                 <div class="a-perex">
+                    <h2>Naše společnost nabízí především</h2>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, imperdiet in. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat.
                     </p>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, isectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ip.
