fix: span deleted from li and hover state in contact row updated

--- a/www/career.html
+++ b/www/career.html
@@ -124,19 +124,19 @@
                                         <h3 class="a-title a-title--bold"><span>nabízíme</span></h3>
                                         <ul class="a-list a-list--dash">
                                             <li>
-                                                <span>Nástup možný ihned, 1 až 3 směnný provoz</span>
+                                                Nástup možný ihned, 1 až 3 směnný provoz
                                             </li>
                                             <li>
-                                                <span>Příplatky za přesčasy</span>
+                                                Příplatky za přesčasy
                                             </li>
                                             <li>
-                                                <span>Moderní zázemí společnosti s více jak 20-letou působností v oboru</span>
+                                                Moderní zázemí společnosti s více jak 20-letou působností v oboru
                                             </li>
                                             <li>
-                                                <span>Možnost profesního růstu a odborné realizace</span>
+                                                Možnost profesního růstu a odborné realizace
                                             </li>
                                             <li>
-                                                <span>Odpovídající finanční ohodnocení</span>
+                                                Odpovídající finanční ohodnocení
                                             </li>
                                         </ul>
                                     </div>
@@ -144,30 +144,30 @@
                                         <h3 class="a-title a-title--bold"><span>náplň práce</span></h3>
                                         <ul class="a-list a-list--dash">
                                             <li>
-                                                <span>práce v kolektivu</span>
+                                               práce v kolektivu
                                             </li>
                                             <li>
-                                                <span>2 – směnný provoz</span>
+                                               2 – směnný provoz
                                             </li>
                                             <li>
-                                                <span>prémie za kvalitu</span>
+                                               prémie za kvalitu
                                             </li>
                                         </ul>
                                     </div>
                                     <div class="col-md-6 mt-5">
-                                        <h3 class="a-title a-title--bold"><span>Požadujeme</span></h3>
+                                        <h3 class="a-title a-title--bold"><span>Požadujeme</h3>
                                         <ul class="a-list a-list--dash">
                                             <li>
-                                                <span>Manuální zručnost</span>
+                                                Manuální zručnost
                                             </li>
                                             <li>
-                                                <span>Pečlivost, spolehlivost, flexibilita</span>
+                                                Pečlivost, spolehlivost, flexibilita
                                             </li>
                                             <li>
-                                                <span>Praxe v oboru výhodou</span>
+                                                Praxe v oboru výhodou
                                             </li>
                                             <li>
-                                                <span>Ochota se učit novým věcem</span>
+                                                Ochota se učit novým věcem
                                             </li>
                                         </ul>
                                     </div>
@@ -202,19 +202,19 @@
                                         <h3 class="a-title a-title--bold"><span>nabízíme</span></h3>
                                         <ul class="a-list a-list--dash">
                                             <li>
-                                                <span>Nástup možný ihned, 1 až 3 směnný provoz</span>
+                                                Nástup možný ihned, 1 až 3 směnný provoz
                                             </li>
                                             <li>
-                                                <span>Příplatky za přesčasy</span>
+                                                Příplatky za přesčasy
                                             </li>
                                             <li>
-                                                <span>Moderní zázemí společnosti s více jak 20-letou působností v oboru</span>
+                                                Moderní zázemí společnosti s více jak 20-letou působností v oboru
                                             </li>
                                             <li>
-                                                <span>Možnost profesního růstu a odborné realizace</span>
+                                                Možnost profesního růstu a odborné realizace
                                             </li>
                                             <li>
-                                                <span>Odpovídající finanční ohodnocení</span>
+                                                Odpovídající finanční ohodnocení
                                             </li>
                                         </ul>
                                     </div>
@@ -222,13 +222,13 @@
                                         <h3 class="a-title a-title--bold"><span>náplň práce</span></h3>
                                         <ul class="a-list a-list--dash">
                                             <li>
-                                                <span>práce v kolektivu</span>
+                                                práce v kolektivu
                                             </li>
                                             <li>
-                                                <span>2 – směnný provoz</span>
+                                                2 – směnný provoz
                                             </li>
                                             <li>
-                                                <span>prémie za kvalitu</span>
+                                                prémie za kvalitu
                                             </li>
                                         </ul>
                                     </div>
@@ -236,16 +236,16 @@
                                         <h3 class="a-title a-title--bold"><span>Požadujeme</span></h3>
                                         <ul class="a-list a-list--dash">
                                             <li>
-                                                <span>Manuální zručnost</span>
+                                                Manuální zručnost
                                             </li>
                                             <li>
-                                                <span>Pečlivost, spolehlivost, flexibilita</span>
+                                                Pečlivost, spolehlivost, flexibilita
                                             </li>
                                             <li>
-                                                <span>Praxe v oboru výhodou</span>
+                                                Praxe v oboru výhodou
                                             </li>
                                             <li>
-                                                <span>Ochota se učit novým věcem</span>
+                                                Ochota se učit novým věcem
                                             </li>
                                         </ul>
                                     </div>
@@ -288,7 +288,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -327,7 +327,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -336,7 +336,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 14:30</li>
                                     <li>
-                                        <a href="fax:+42069655813">
+                                        <a href="tel:+42069655813">
                                             Tel.: +420 696 55 813
                                         </a>
                                     </li>
@@ -360,7 +360,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -369,7 +369,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
@@ -393,7 +393,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -402,7 +402,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
