--- a/www/about-us.html
+++ b/www/about-us.html
@@ -333,7 +333,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -372,7 +372,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -381,7 +381,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 14:30</li>
                                     <li>
-                                        <a href="fax:+42069655813">
+                                        <a href="tel:+42069655813">
                                             Tel.: +420 696 55 813
                                         </a>
                                     </li>
@@ -405,7 +405,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -414,7 +414,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
@@ -438,7 +438,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -447,7 +447,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
