--- a/www/contact-us.html
+++ b/www/contact-us.html
@@ -111,7 +111,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -188,7 +188,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -197,7 +197,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 14:30</li>
                                     <li>
-                                        <a href="fax:+42069655813">
+                                        <a href="tel:+42069655813">
                                             Tel.: +420 696 55 813
                                         </a>
                                     </li>
@@ -219,7 +219,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -228,7 +228,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
@@ -250,7 +250,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -259,7 +259,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
