--- a/www/index.html
+++ b/www/index.html
@@ -271,7 +271,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -308,7 +308,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -317,7 +317,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 14:30</li>
                                     <li>
-                                        <a href="fax:+42069655813">
+                                        <a href="tel:+42069655813">
                                             Tel.: +420 696 55 813
                                         </a>
                                     </li>
@@ -339,7 +339,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -348,7 +348,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
@@ -370,7 +370,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -379,7 +379,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
