--- a/www/service-detail.html
+++ b/www/service-detail.html
@@ -119,12 +119,12 @@
                 <div class="a-perex">
                     <h2>Naše společnost nabízí především</h2>
                     <ul>
-                        <li><span> výroba vstřikovacích forem na termoplasty, včetně forem na lisy babyplast</span></li>
-                        <li><span> výroba kokil na lití hliníkových slitin a zinku</span></li>
-                        <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
-                        <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
-                        <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
-                        <li><span> výroba velmi přesných a tvarově složitých dílců (vložky forem, razníky, střižné matrice, protlačovací matrice, součásti automatických linek, díly přípravků)</span></li>
+                        <li>výroba vstřikovacích forem na termoplasty, včetně forem na lisy babyplast</li>
+                        <li>výroba kokil na lití hliníkových slitin a zinku</li>
+                        <li>výroba tažných, střižných, ohýbacích a postupových nástrojů </li>
+                        <li>výroba tažných, střižných, ohýbacích a postupových nástrojů </li>
+                        <li>výroba tažných, střižných, ohýbacích a postupových nástrojů </li>
+                        <li>výroba velmi přesných a tvarově složitých dílců (vložky forem, razníky, střižné matrice, protlačovací matrice, součásti automatických linek, díly přípravků)</li>
                     </ul>
                 </div>
 
@@ -443,7 +443,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -482,7 +482,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469655811">
+                                        <a href="tel:+420469655811">
                                             Tel.: +420 469 655 811
                                         </a>
                                     </li>
@@ -491,7 +491,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 14:30</li>
                                     <li>
-                                        <a href="fax:+42069655813">
+                                        <a href="tel:+42069655813">
                                             Tel.: +420 696 55 813
                                         </a>
                                     </li>
@@ -515,7 +515,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -524,7 +524,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
@@ -548,7 +548,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="fax:+420469404811">
+                                        <a href="tel:+420469404811">
                                             Tel.: +420 469 404 312
                                         </a>
                                     </li>
@@ -557,7 +557,7 @@
                                     <li><strong>Warehouse open time:</strong></li>
                                     <li>Mo – Fri   6:00 – 15:30</li>
                                     <li>
-                                        <a href="fax:+420495404311">
+                                        <a href="tel:+420495404311">
                                             Tel.: +420 495 404 311
                                         </a>
                                     </li>
