--- a/www/about-us.html
+++ b/www/about-us.html
@@ -99,7 +99,7 @@
             <div class="a-container a-container--xl">
                 <div class="m-timeline js--timeline">
                     <div class="m-timeline__dots js--dotted-line"></div>
-                    <div class="m-timeline__wrapper">
+                    <div class="m-timeline__wrapper js--timeline-wrap">
                         <ul class="m-timeline__list">
                             <li class="m-timeline__item">
                                 <span class="m-timeline__line js--timeline-line"></span>
@@ -187,7 +187,7 @@
             </div>
         </section>
 
-        <div class="a-divider a-divider--light">
+        <div class="a-divider a-divider--light js--timeline-endPin">
             <div class="a-container">
                 <div class="a-divider__line"></div>
             </div>
