feat: animation pin

--- a/www/about-us.html
+++ b/www/about-us.html
@@ -187,7 +187,7 @@
             </div>
         </section>
 
-        <div class="a-divider a-divider--light js--timeline-endPin">
+        <div class="a-divider a-divider--light">
             <div class="a-container">
                 <div class="a-divider__line"></div>
             </div>
