--- a/www/about-us.html
+++ b/www/about-us.html
@@ -70,10 +70,10 @@
                 <div class="o-hero__body">
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="a-title o-hero__title">O naší <span>společnosti</span></h1>
+                            <h1 class="a-title o-hero__title wow fadeIn">O naší <span class="wow fadeIn" data-wow-delay="0.5s">společnosti</span></h1>
                         </div>
                         <div class="col-xl-10 d-flex justify-content-end">
-                            <div class="a-perex a-perex--md">
+                            <div class="a-perex a-perex--md wow fadeIn" data-wow-delay="1s">
                                 <p>Společnost ONIVON a.s., byla založena v roce 2000. Skládá se z výrobních provozů Lisovna kovů (1991), Nástrojárna (1991), Distribuce Energií (2000) Lisovna plastů (2005), Lisovna plastů-Medical (2008) a Medical Devices (2013).</p>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="row mt-5 g-4">
                     <div class="col-md-4">
-                        <div class="m-white-box m-white-box--sm">
+                        <div class="m-white-box m-white-box--sm wow fadeIn" data-wow-delay="0.5s">
                             <h3 class="a-title a-title--primary"><span>1</span></h3>
                             <div class="a-perex">
                                 <p>Systém řízení kvality musí vést k neustálému zlepšování všech procesů a k udržení efektivnosti a bezpečnosti výrobků.</p>
@@ -219,7 +219,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="m-white-box m-white-box--sm">
+                        <div class="m-white-box m-white-box--sm wow fadeIn" data-wow-delay="0.7s">
                             <h3 class="a-title a-title--primary"><span>2</span></h3>
                             <div class="a-perex">
                                 <p>Management se osobně angažuje v uplatňování požadavků předpisů týkajících se bezpečnosti a funkčnosti zdravotnických prostředků s cílem udržet efektivnost systému managementu jakosti.</p>
@@ -227,7 +227,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="m-white-box m-white-box--sm">
+                        <div class="m-white-box m-white-box--sm wow fadeIn" data-wow-delay="0.9s">
                             <h3 class="a-title a-title--primary"><span>3</span></h3>
                             <div class="a-perex">
                                 <p>Řízení kvality je trvalým předmětem zájmu vedení společnosti a je chápáno jako jeden z nejdůležitějších nástrojů k dosažení prosperity a stability.</p>
@@ -235,7 +235,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="m-white-box m-white-box--sm">
+                        <div class="m-white-box m-white-box--sm wow fadeIn" data-wow-delay="1.1s">
                             <h3 class="a-title a-title--primary"><span>4</span></h3>
                             <div class="a-perex">
                                 <p>Základním stavebním prvkem je rozvoj společnosti spočívající v modernizaci veškerých zdrojů (lidé a stroje).</p>
@@ -243,7 +243,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="m-white-box m-white-box--sm">
+                        <div class="m-white-box m-white-box--sm wow fadeIn" data-wow-delay="1.3s">
                             <h3 class="a-title a-title--primary"><span>5</span></h3>
                             <div class="a-perex">
                                 <p>Každému zaměstnanci je politika kvality sdělena, vysvětlena a pochopena (školení, nástěnky).</p>
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="m-white-box m-white-box--sm">
+                        <div class="m-white-box m-white-box--sm wow fadeIn" data-wow-delay="1.5s">
                             <h3 class="a-title a-title--primary"><span>6</span></h3>
                             <div class="a-perex">
                                 <p>Nejdůležitější činností v kvalitě je obhájit SMK před zákazníkem a certifikační autoritou.</p>
@@ -259,7 +259,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="m-white-box m-white-box--sm">
+                        <div class="m-white-box m-white-box--sm wow fadeIn" data-wow-delay="1.7s">
                             <h3 class="a-title a-title--primary"><span>7</span></h3>
                             <div class="a-perex">
                                 <p>Vytváříme takovou strategii, aby se k nám vraceli zákazníci, nikoli výrobky..</p>
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <div class="m-white-box m-white-box--sm">
+                        <div class="m-white-box m-white-box--sm wow fadeIn" data-wow-delay="1.9s">
                             <h3 class="a-title a-title--primary"><span>8</span></h3>
                             <div class="a-perex">
                                 <p>Zákazník k nám přichází se svým přáním a je jedno, jestli se dostaví osobně, napíše, nebo zatelefonuje. Nikdy nás neruší a nemusí se nám přizpůsobit. Nebojujeme s ním, neboť ještě nikdo nad svým zákazníkem nezvítězil.</p>
