--- a/www/career.html
+++ b/www/career.html
@@ -65,12 +65,11 @@
             </div>
         </header>
 
-
         <section class="o-hero o-hero--dark js--imageParallax">
             <div class="a-container">
                 <div class="o-hero__body">
-                    <h1 class="a-title o-hero__title">Přidejte se <span>k nám</span></h1>
-                    <div class="a-icon">
+                    <h1 class="a-title o-hero__title wow fadeIn">Přidejte se <span class="wow fadeIn" data-wow-delay="0.5s">k nám</span></h1>
+                    <div class="a-icon wow fadeIn" data-wow-delay="1s">
                         <img src="./img/icon-join.png" srcseet="./img/icon-join@2x.png 2x" alt="icon join">
                     </div>
                 </div>
