--- a/www/contact-us.html
+++ b/www/contact-us.html
@@ -71,7 +71,7 @@
                 <div class="o-hero__body">
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="a-title  o-hero__title">Kontaktujte<span>nás</span></h1>
+                            <h1 class="a-title  o-hero__title wow fadeIn">Kontaktujte<span class="wow fadeIn" data-wow-delay="0.5s">nás</span></h1>
                         </div>
                     </div>
                 </div>
