--- a/www/index.html
+++ b/www/index.html
@@ -68,11 +68,11 @@
 
         <section class="o-hello">
             <div class="o-hello__body container container--xl">
-                <h1 class="a-title o-hello__title">Onivon<span>Group</span></h1>
-                <div class="a-perex a-perex--sm">
+                <h1 class="a-title o-hello__title wow fadeIn" data-wow-duration="0.5s">Onivon<span class="wow fadeIn" data-wow-delay="0.5s">Group</span></h1>
+                <div class="a-perex a-perex--sm wow fadeIn" data-wow-duration="0.5s" data-wow-delay="1s">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sollicitudin.</p>
                 </div>
-                <div class="o-hello__actions">
+                <div class="o-hello__actions wow fadeIn" data-wow-duration="1s" data-wow-delay="1s">
                     <a href="#" class="a-btn a-btn--primary">
                         O nás
                         <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
