--- a/www/service-detail.html
+++ b/www/service-detail.html
@@ -71,13 +71,13 @@
                 <div class="o-hero__body">
                     <div class="row">
                         <div class="col-md-7">
-                            <h1 class="a-title o-hero__title">Energie <span>a služby</span></h1>
-                            <div class="a-icon">
+                            <h1 class="a-title o-hero__title wow fadeIn">Energie <span class="wow fadeIn" data-wow-delay="0.5s">a služby</span></h1>
+                            <div class="a-icon wow fadeIn" data-wow-delay="1s">
                                 <img src="./img/icon-energetika.png" srcseet="./img/icon-energetika@2x.png 2x" alt="icon energetika">
                             </div>
                         </div>
                         <div class="col-md-5 d-flex align-items-center">
-                            <div class="a-perex">
+                            <div class="a-perex wow fadeIn" data-wow-delay="1s">
                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, imperdiet in.</p>
                             </div>
                         </div>
